--- a/core/templates/core/add_contribution.html
+++ b/core/templates/core/add_contribution.html
@@ -1,5 +1,5 @@
+{% extends 'base.html' %}
 {% load static %}
-{% extends 'core/base.html' %}
 {% block content %}
 <div class="container py-3">
   <h3 class="mb-3">💰 Record Contribution</h3>
