--- a/core/templates/core/already_contributed.html
+++ b/core/templates/core/already_contributed.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 {% block content %}
   <h2>{{ customer.name }} has already made a contribution today.</h2>
