"Communities " Template and Button in Super Admin Dashboard added

--- a/core/templates/core/super_dashboard.html
+++ b/core/templates/core/super_dashboard.html
@@ -128,8 +128,8 @@
                         </a>
                         <a href="{% url 'manage_officers' %}" class="btn btn-info me-2">Manage Officers
                         </a>
-                        <a href="{% url 'export_contributions_pdf' %}" class="list-group-item list-group-item-action">
-                            <i class="fas fa-file-export text-secondary"></i> Export Reports
+                        <a href="{% url 'community_list' %}" class="btn btn-success me-2">
+                             Communities
                         </a>
                     </div>
                 </div>
